--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^8.2.13",
     "@angular/platform-browser-dynamic": "^8.2.13",
     "@angular/router": "^8.2.13",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.4.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.10.2"
