--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.13",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "^8.2.13",
     "@angular/compiler": "^8.2.13",
     "@angular/core": "^8.2.13",
@@ -22,6 +23,7 @@
     "@angular/router": "^8.2.13",
     "bootstrap": "^4.3.1",
     "core-js": "^3.4.0",
+    "ng2-date-picker": "^2.12.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.10.2"
   },
