--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^8.2.13",
     "@angular/platform-browser-dynamic": "^8.2.13",
     "@angular/router": "^8.2.13",
+    "angular-slickgrid": "^2.14.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.4.0",
+    "jquery": "^3.4.1",
     "ng2-date-picker": "^2.12.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.10.2"
