--- a/package.json
+++ b/package.json
@@ -11,43 +11,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.13",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.13",
-    "@angular/compiler": "^8.2.13",
-    "@angular/core": "^8.2.13",
-    "@angular/forms": "^8.2.13",
+    "@angular/animations": "^10.0.9",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "^10.0.9",
+    "@angular/compiler": "^10.0.9",
+    "@angular/core": "^10.0.9",
+    "@angular/forms": "^10.0.9",
     "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^8.2.13",
-    "@angular/platform-browser-dynamic": "^8.2.13",
-    "@angular/router": "^8.2.13",
+    "@angular/platform-browser": "^10.0.9",
+    "@angular/platform-browser-dynamic": "^10.0.9",
+    "@angular/router": "^10.0.9",
     "angular-slickgrid": "^2.14.3",
     "bootstrap": "^4.3.1",
     "core-js": "^3.4.0",
     "jquery": "^3.4.1",
     "ng2-date-picker": "^2.12.0",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.10.2"
+    "tslib": "^2.0.0",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.18",
-    "@angular/cli": "^8.3.18",
-    "@angular/compiler-cli": "^8.2.13",
-    "@angular/language-service": "^8.2.13",
+    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.9",
+    "@angular/language-service": "^10.0.9",
     "@types/jasmine": "~3.4.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.12.7",
-    "codelyzer": "~5.2.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
     "ts-node": "~8.5.0",
-    "tslint": "~5.20.1",
-    "typescript": "3.4.5"
+    "tslint": "~6.1.0",
+    "typescript": "3.9.7"
   }
 }
