--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/core": "^10.0.9",
     "@angular/forms": "^10.0.9",
     "@angular/http": "^7.2.15",
+    "@angular/material": "^10.2.0",
+    "@angular/material-moment-adapter": "^10.2.0",
     "@angular/platform-browser": "^10.0.9",
     "@angular/platform-browser-dynamic": "^10.0.9",
     "@angular/router": "^10.0.9",
@@ -25,7 +27,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.4.0",
     "jquery": "^3.4.1",
-    "ng2-date-picker": "^2.12.0",
+    "moment": "^2.29.1",
     "rxjs": "^6.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
